[package]
name = "solana-transaction-crawler"
version = "0.1.1"                                                         # Bump version since we're making breaking changes
edition = "2021"
description = "A library to make it easier to crawl Solana transactions."
repository = "https://github.com/pintchom/solana-transaction-crawler"     # Update this
license = "Apache-2.0"

[dependencies]
rayon = "1.5.3"
retry = "1.3.1"
serde = "1.0.139"
solana-client = "1.18"
solana-program = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
thiserror = "1.0.31"
tokio = "1.14"
